--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
         "slim/psr7": "^1.5",
         "php-di/php-di": "^6.4",
         "illuminate/database": "9.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "DogBreedsAPI\\": "api/"
+        }
     }
 }
