--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
         "slim/slim": "4.*",
         "slim/psr7": "^1.5",
         "php-di/php-di": "^6.4",
-        "illuminate/database": "9.*"
+        "illuminate/database": "9.*",
+        "thiagoprz/eloquent-composite-key": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "DogBreedsAPI\\": "api/"
+        }
     }
 }
