--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 .idea/**/usage.staticstics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/php.xml
+.idea/php.xml
+.idea/dataSources/b6ca4e7b-e55c-43f5-8f68-54483bf5934f/storage_v2/_src_/schema/performance_schema.kIw0nw.meta
+.idea/dataSources/b6ca4e7b-e55c-43f5-8f68-54483bf5934f/storage_v2/_src_/schema/mysql.osA4Bg.meta
+.idea/dataSources/b6ca4e7b-e55c-43f5-8f68-54483bf5934f.xml
+.idea/dataSources.local.xml
+.idea/.name
+.idea/dataSources.local.xml
+.idea/dataSources.local.xml
+.idea/dataSources/b6ca4e7b-e55c-43f5-8f68-54483bf5934f.xml
